0.13
    PathDetails return null instead of -1 for Infinity by default
    replaced AverageSpeedDetails by DecimalDetails
    moved TagParser into new package: com.graphhopper.routing.util.parsers
    removed FlagEncoderFactory.DEFAULT
    removed forestry and motorroad from RoadClass
    SpatialRule.AccessValue replaced by RoadAccess
    removed EncodedValueLookup.hasEncoder, use hasEncodedValue instead
    removed MappedDecimalEncodedValue: should be replaced with FactoredDecimalEncodedValue
    DataFlagEncoder: it is now required to add EncodedValues before. graph.encoded_values: max_speed,road_class,road_environment,road_access
    instead of EncodingManager.ROUNDABOUT use Roundabout.KEY
    changed output format of result=pointlist and moved it into separate endpoint /spt
    removed TraversalMode.EDGE_BASED_1DIR and TraversalMode.EDGE_BASED_2DIR_UTURN, renamed TraversalMode.EDGE_BASED_2DIR to TraversalMode.EDGE_BASED
    to prevent u-turns when using edge-based algorithms it is now required to use TurnWeighting, #1640

0.12
    renamed VirtualEdgeIteratorState.getOriginalEdgeKey to more precise getOriginalEdgeKey #1549
    access refactoring #1436 that moves AccessValue into SpatialRule.Access
    refactoring of EncodingManager to use builder pattern. Migration should be simple. Replace new EncodingManager with EncodingManager.create
	The methods GraphHopper.setEnableInstructions/setPreferredLanguage is now in EncodingManager.Builder
    EncodingManager.supports renames to hasEncoder
    big refactoring #1447: to increase 64bit limit of flags, make reverse direction handling easier, to allow shared EncodedValues,
        remove reverseFlags method, much simpler property access, simplify FlagEncoder (maybe even deprecate this interface at a later stage)
    moved shp-reader into separate repository: https://github.com/graphhopper/graphhopper-reader-shp    

0.11
    web resources for dropwizard web framework (no servlets anymore) #1108