@@ -1,12 +1,0 @@
-version: '2'
-services:
-    graph-hopper:
-        container_name: osm-graph-hopper
-        build: ../../
-        volumes:
-            - ../../data:/data
-        environment:
-            JAVA_OPTS: "-server -Xconcurrentio -Xmx1g -Xms1g -XX:+UseG1GC -XX:MetaspaceSize=100M -Ddw.server.applicationConnectors[0].bindHost=0.0.0.0 -Ddw.server.applicationConnectors[0].port=11111"
-        ports:
-            - "11111:11111"
-        command: /data/europe_germany_berlin.pbf
